# mind-map

./: .env.library  .gitattributes  .gitignore  .tmp-release-notes-v0.2.9.md  CHANGELOG.md  CONTRIBUTING.md  README.md  README_EN.md  README_MORE_EN.md  README_MORE_ZH.md  SECURITY_AUDIT.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.mjs  tsconfig.json  vite.config.js  vite.lib.config.js
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
app/: .prettierignore  package-lock.json  package.json  vite.config.js  vite.lib.config.js
docs/: ai-migration.md  desktop-packaging.md  project-roadmap.md
scripts/: ai.js  build-library-min.js  copy-index.js  createNodeImageList.js  test-ai-provider.mjs  updateVersion.js
simple-mind-map/: code-review-report.md  full.js  index.js  package-lock.json  package.json
simple-mind-map-plugin-themes/: package.json
src/: App.vue  i18n.js  main.js  router.js  store.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/file-association/icons/: smm-document.icns
src-tauri/file-association/linux/: application-x-mindmap-smm.xml  mindmap-smm.desktop  postinstall.sh
src-tauri/file-association/macos/: Info.plist
src-tauri/file-association/windows/: smm-file-association.nsh
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  config.rs  fs.rs  mod.rs  recovery.rs
src-tauri/src/services/: ai.rs  app_fs.rs  app_state.rs  file_association.rs  mod.rs  recovery.rs
tests/: ai-proxy-server.test.mjs  (+30 more)
(+206 files in other folders)
