[package]
name = "mind-map-desktop"
version = "0.1.0"
description = "Mind Map Desktop"
authors = ["Codex"]
edition = "2021"
license = "MIT"

[lib]
name = "mind_map_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
futures-util = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.9.1", features = [] }
tauri-plugin-dialog = "2.4.2"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread", "sync"] }
