[package]
name = "mind-map-desktop"
version = "0.2.4"
description = "MindMap"
authors = ["Codex"]
edition = "2021"
license = "MIT"

[lib]
name = "mind_map_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
futures-util = "0.3.32"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.0"
tokio = { version = "1.50.0", features = ["fs", "macros", "rt-multi-thread", "sync"] }
